 + hd44780: Add a 'none' charmap which does not replace any character
 * hd44780: Change mapping for spanish 'n with tilde' characters
 * hd44780: Exclude pin for switchable backlight from keypad scanning
 * server core: New network input buffering
 * hd44780: Extended subdriver API and performance improvement for lcd2usb
 * hd44780: Add KOI8-R character mapping (Yura Scheglyuk)

v0.5.3
 + lcdexec: notification when called program finishes
 + xosd driver: offset from top-left corner
 + LCDd: Hello= config option for startup message
 * glk driver: bignum support fixed
 * update local snprintf to the last one, which is GPL
 - server core: cleanup - remove unnecessary cruft
 * server core: refactor rendering code
 + LCDd: config options TitleSpeed= and Heartbeat=
 * overhauled CwLnx driver (Dave Platt)
 * overhauled picolcd driver (Nicu Pavel)
 + add ServerScreen=blank option value
 * MtxOrb driver: fix VFD/VKD support (Ethan Dicks)
 + new driver lis for VLSystem L.I.S VFD (Daryl Fonseca-Holt)
 * serialPOS driver: input support, cleanup (Eric Pooch)
 + new driver shuttleVFD for USB-based Shuttle VFDs (Thien Vu)
 * enable building lcdproc client on FreeBSD AMD64 platform (M. Dolze)
 * Autoconf fixes for Net/FreeBSD (M. Dolze)
 * fixes for the lcpdroc client iface screen on *BSD (M.Dolze)
 + key support for hd44780/lcd2usb (M. Dolze)
 + option Priority for NoritakeVFD (idea: Richard Muratti)
 * overhauled NoritakeVFD driver (idea: Richard Muratti)
 * allow wrapping slider menu items with <= 4 keys (M. Dolze)
 * a bit more Doxygen-ation and documentation
 * hd44780 driver: make ConnectionType 4bit more fool-proof (M. Dolze)
 * picolcd driver: overhaul USB init for more portability (M. Dolze)
 + curses driver: new option DrawBorder (Bruno Schwander)
 * avoid sending duplicate "success" messages in response to menu_add_item
 + lcdexec: parameter support using widgets
 * server core: display values in menu for all input MenuEntry types