@@ -23,6 +23,7 @@ v.0.5dev (ongoing development)
  * server core: New network input buffering
  * hd44780: Extended subdriver API and performance improvement for lcd2usb
  * hd44780: Add KOI8-R character mapping (Yura Scheglyuk)
+ * shuttleVFD: Add support for devices with USB VID 0x1308 again
 
 v0.5.3
  + lcdexec: notification when called program finishes
